feat(task): Подключил экспорт задач в разные форматы (csv, xml) как пример демонстрации паттерна Стратегия
META: #86811
